test/fixtures/syntaxerrors/o.lys.ast.desugar
|-Document(0,13)
  |-(AstCons)
    |-VarDirective(0,8)
      |-(AstCons)
        |-NoModifier(0,0)
          <Rule0>
        |-VarDeclaration(0,8)
          |-(AstCons)
            |-NameIdentifier(4,5)
              |-Identifier=a
            |-<SyntaxError>=A value was expected.
    |-<UNEXPECTED TOKEN>=match